--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 body {
-    margin:0;
-    padding:0;
-    background-color: blue;
+    background-color: rgb(55, 55, 71);
 }
 header {
+    margin:0 125px;
+    padding: 20px;
     font-family: "Noto Sans", sans-serif;
     display: flex;
     justify-content: space-between;
@@ -12,11 +12,36 @@ header {
     
 }
 .Header {
-    max-width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    max-width: 800px;
     color: white;
   
 }
 ul {
     display: flex;
-
+    justify-content: space-around;
+    align-items: center;
+    list-style-type: none;
+    
+    
+    
+}
+ul a {
+    color: white;
+    font-family: "Noto Sans", sans-serif;
+    font-size: 14px;
+    text-decoration: none;
+    padding: 1em;
+}
+button {
+    background: #fb2056;
+    padding: 8px 40px;
+    border-radius: 20%;
+    border: 0;
+    color: white;
+    font-weight: bold;
+    font-family: "Noto Sans", sans-serif;
+    font-size: 16px;
 }
