partie navbarduheader ok

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     background-color: rgb(55, 55, 71);
     margin:0;
 }
-header {
+.Header1 {
     margin:0 125px;
     padding: 20px;
     font-family: "Noto Sans", sans-serif;
@@ -36,8 +36,8 @@ header {
 ul {
     display: flex;
     justify-content: space-around;
-    align-items: center;/*alignement des éléments au centre*/
-    list-style-type: none;/*suppression des puces*/
+    align-items: center; /*alignement des éléments au centre*/
+    list-style-type: none; /*suppression des puces*/
     
     
     
@@ -45,20 +45,20 @@ ul {
 ul a {
     color: white;
     font-family: "Noto Sans", sans-serif;
-    font-size: 0.924vw;/* conversion de 14px en vw pour lisibilité sur différents supports*/
-    text-decoration: none;/*suppression du surlignage par défaut*/
+    font-size: 0.924vw; /* conversion de 14px en vw pour lisibilité sur différents supports*/
+    text-decoration: none; /*suppression du surlignage par défaut*/
     padding: 1em;
 }
 button {
     background: #fb2056;
     padding: 8px 40px;
-    border-radius: 30px;/*bord du bouton arrondi*/
+    border-radius: 30px; /*bord du bouton arrondi*/
     border: 0;
     color: white;
     font-weight: bold;
     font-family: "Noto Sans", sans-serif;
     font-size: 1.056vw;
 }
-button:hover {/* changement de couleur de fond au survol*/
+button:hover { /* changement de couleur de fond au survol*/
     background-color: #da1c4b;
 }
