--- a/style.css
+++ b/style.css
@@ -1,126 +1,152 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 /*propriété body */
 * {
-    box-sizing: border-box; /* Opera/IE 8+ ok */
-  
-  }
-   
-     
-  html {
-    scroll-behavior: auto;
-    width: 100%;
-  
-  }
+    box-sizing: border-box;
+    /* Opera/IE 8+ ok */
+
+}
 
 body {
-    background-color: #404040;
-    margin:0;
+    margin: 0;
+    padding: 0;
     font-family: "Noto Sans", sans-serif;
-    font-size: 1.074vw; /* conversion de 16px en vw pour lisibilité sur différents supports*/
+    font-size: 1.074vw;
+    /* conversion de 16px en vw pour lisibilité sur différents supports*/
 }
-header,footer{
+
+header,
+footer {
     color: white;
 }
-h2, h1, h3, h4 {
-    font-family: "Montserrat",sans-serif;
+
+h2,
+h1,
+h3,
+h4 {
+    font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
     font-weight: 500;
     font-style: normal;
 }
+
 h1 {
     font-size: 4.295vw;
     font-weight: 700;
 }
-h3{
+
+h3 {
     font-size: 1.611vw;
     font-weight: 600;
 }
+
 header {
     height: 55.772vw;
     display: flex;
     justify-content: space-between;
     flex-flow: column wrap;
-    background-image: url(https://websitedemos.net/outdoor-adventure-02/wp-content/uploads/sites/351/2018/11/hero-bg.jpg);
+    background-image: linear-gradient(rgba(64, 64, 64, 0.8), rgba(64, 64, 64, 0.8)), url(https://websitedemos.net/outdoor-adventure-02/wp-content/uploads/sites/351/2018/11/hero-bg.jpg);
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 
-  
+
 }
-/*.image-container {
+
+/* #image-filtre { 
     position: relative;
-    height: 18.57vw
+    z-index: 1;
 }
-.image-container::after {
+
+#image-filtre::before {
     content: '';
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7); /* 70% d'opacité 
-  }
-  */
-  
+    right: 0;
+    bottom: 0;
+    background-color: rgba(64, 64, 64, 0.8); /* Assombrissement avec une opacité de 80% 
+    z-index: -1;
+}
+ */
+
 .Header1 {
-    margin:0 8.389vw;
+    margin: 0 8.389vw;
     padding: 1.342vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-direction: row;
     
+
 }
+
 .navbarCTA {
     display: flex;
     align-items: center;
     justify-content: space-around;
     max-width: 53.691vw;
-   
-  
+
+
 }
+
 ul {
     display: flex;
     justify-content: space-around;
-    align-items: center; /*alignement des éléments au centre*/
-    list-style-type: none; /*suppression des puces*/
-    
+    align-items: center;
+    /*alignement des éléments au centre*/
+    list-style-type: none;
+    /*suppression des puces*/
+
 }
-li:hover{ /*change le curseur de la souris en main au survol des éléments cliquables*/
+
+li:hover {
+    /*change le curseur de la souris en main au survol des éléments cliquables*/
     cursor: pointer;
 }
+
 ul a {
-    text-decoration: none; /*suppression du surlignage par défaut*/
+    text-decoration: none;
+    /*suppression du surlignage par défaut*/
     padding: 1em;
     color: white;
     font-size: 0.94vw;
 }
+
 button {
     background: #fb2056;
     padding: 0.537vw 2.685vw;
-    border-radius: 2.013vw; /*bord du bouton arrondi*/
+    border-radius: 2.013vw;
+    /*bord du bouton arrondi*/
     border: 0;
     color: white;
     font-weight: bold;
     font-family: "Noto Sans", sans-serif;
     font-size: 0.94vw;
 }
-button:hover { /* changement de couleur de fond au survol*/
+
+button:hover {
+    /* changement de couleur de fond au survol*/
     background-color: #da1c4b;
-  
+    transition: background-color 0.3s ease;
+
 }
 
-footer  {
+footer {
 
-    font-size: 0.94vw; /* conversion de 14px en vw pour lisibilité sur différents supports*/
-    background-color:#404040 ;
+    font-size: 0.94vw;
+    /* conversion de 14px en vw pour lisibilité sur différents supports*/
+    background-color: #404040;
     text-align: center;
     padding: 2.685vw 0;
 }
-address{
+
+address {
     font-style: normal;
 }
+
 .Header2 {
     display: flex;
     justify-content: center;
@@ -129,8 +155,72 @@ address{
     padding-bottom: 4.85vw;
     margin-bottom: 4.85vw;
 }
+
 .Header2 span {
     width: 4%;
-    margin:0 auto ;
+    margin: 0 auto;
     border-bottom: #fb2056 solid 0.134vw;
+}
+
+/* Styles pour les écrans de largeur inférieure ou égale à 640px */
+
+@media (max-width: 640px) {
+    .navbarCTA nav ul {
+        display: none;
+        /* Cache la liste de navigation */
+        flex-direction: column;
+        width: 100%;
+    }
+
+
+    .icone-menu {
+        display: block;
+        /* Assure que l'icône est visible en mode mobile */
+        cursor: pointer;
+        position: absolute;
+        top: 1.32vw;
+        right: 1.32vw;
+        font-size: 1.584vw;
+        background: color #fb2056;
+        /* Couleur de fond */
+        color: white;
+        padding: 0.66vw;
+        border-radius: 5px;
+        z-index: 1000; /*ordre et position des élements flexibles ou enfants*/
+        transition: background-color 0.3s ease;
+    }
+
+    .icone-menu:hover {
+        background-color: #da1c4b;
+    }
+}
+
+
+header {
+    flex-direction: column;
+    /* Les éléments de l'en-tête s'alignent en colonne */
+}
+
+.navbarCTA {
+    width: 100%;
+    /* Étendre la barre de navigation sur toute la largeur */
+    justify-content: space-between;
+    /* Espacement autour du bouton */
+}
+
+
+
+button {
+    margin-top: 1.32vw;
+    /* Ajoute de l'espace au-dessus du bouton TAKE ACTION */
+}
+
+
+
+/* Styles pour les écrans de largeur supérieure à 640px */
+@media (min-width: 641px) {
+    .icone-menu {
+        display: none;
+        /* Cache l'icône menu sur les écrans plus larges */
+    }
 }
