--- a/style.css
+++ b/style.css
@@ -224,3 +224,23 @@ button {
         /* Cache l'icône menu sur les écrans plus larges */
     }
 }
+.banner {
+    display: flex;
+    justify-content: center;
+    padding: 4.85vw;
+    margin:4.85vw;
+   
+}
+#quote {
+    width: 171px;
+    height: 72px;
+    color: beige;
+
+}
+.citation {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content:flex-start;
+    height: 90px;
+}
