--- a/style.css
+++ b/style.css
@@ -1,12 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-/*propriété body */
-* {
-    box-sizing: border-box;
-    /* Opera/IE 8+ ok */
 
-}
 
 body {
     margin: 0;
@@ -35,10 +30,20 @@ h1 {
     font-size: 4.295vw;
     font-weight: 700;
 }
+h2 {
+    font-size:2.282vw;
+    font-weight:650; 
+}
 
 h3 {
     font-size: 1.611vw;
     font-weight: 600;
+}
+img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+
 }
 
 header {
@@ -106,13 +111,15 @@ li:hover {
     /*change le curseur de la souris en main au survol des éléments cliquables*/
     cursor: pointer;
 }
-
-ul a {
+a {
     text-decoration: none;
     /*suppression du surlignage par défaut*/
-    padding: 1em;
     color: white;
     font-size: 0.94vw;
+}
+
+ul a {
+    padding: 1em;
 }
 
 button {
@@ -297,4 +304,20 @@ button {
         font-size: 16px; /* Rétablit la taille originale des citations sur les grands écrans */
     }
 }
-
+.evenement {
+    background-color: #f0f0f0;
+    display: flex;
+    justify-content: space-around;
+   flex-direction: column;
+   align-items: center;
+   gap: 30px;
+   padding: 10px;
+}
+.evenement span {
+    width: 20%;
+    margin: 0 auto;
+    border-bottom: #fb2056 solid 0.268vw;
+}
+.evenement h2 {
+    margin: 0;
+}
