--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Noto Sans", sans-serif;
-    font-size: 1.074vw;
-    /* taille de police par défaut de tous les textes inclus dans le body conversion de 16px en vw pour lisibilité sur différents supports*/
+    font-size: 1em;
+    /* taille de police par défaut de tous les textes inclus dans le body conversion de 16px en em pour lisibilité sur différents supports*/
 }
 
 header,
@@ -39,11 +39,14 @@ h3 {
     font-size: 1.611vw;
     font-weight: 600;
 }
+h4 {
+    font-weight: 580;
+    font-size: 1.500vw;
+}
 img {
     max-width: 100%;
     max-height: 100%;
     object-fit: cover;
-
 }
 
 header {
@@ -52,14 +55,14 @@ header {
     justify-content: space-between;
     flex-flow: column wrap;
     background-image: linear-gradient(rgba(64, 64, 64, 0.8), rgba(64, 64, 64, 0.8)), url(https://websitedemos.net/outdoor-adventure-02/wp-content/uploads/sites/351/2018/11/hero-bg.jpg);
-    background-attachment: fixed;
+    background-attachment: fixed; /*Le background est fixé (le menu et les titres défilent devant l'image lors du scroll).*/
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-
-
 }
-
+#Take-Action {
+    width: 100%;
+}
 /* #image-filtre { 
     position: relative;
     z-index: 1;
@@ -75,7 +78,7 @@ header {
     background-color: rgba(64, 64, 64, 0.8); /* Assombrissement avec une opacité de 80% 
     z-index: -1;
 }
- */
+ positionnement du logo par rapport au menu et utilisation de *display:flex* pour obtenir le positionnement désiré*/
 
 .Header1 {
     margin: 0 8.389vw;
@@ -115,23 +118,33 @@ a {
     text-decoration: none;
     /*suppression du surlignage par défaut*/
     color: white;
-    font-size: 0.94vw;
+    font-size: 1em;
+    width: max-content;
+    
+}
+a:visited {
+    background-color: #000;/*liens visités auront un fond noir et une couleur blanche*/  
+     color: #fff;
 }
 
+#Take-Action a {
+    display: block;
+    width: 100%;
+}
 ul a {
     padding: 1em;
 }
 
 button {
     background: #fb2056;
-    padding: 0.537vw 2.685vw;
+    padding: 0.537vw 1.285vw;
     border-radius: 2.013vw;
     /*bord du bouton arrondi*/
     border: 0;
     color: white;
     font-weight: bold;
     font-family: "Noto Sans", sans-serif;
-    font-size: 0.94vw;
+    font-size: 1vw;
 }
 
 button:hover {
@@ -144,10 +157,10 @@ button:hover {
 footer {
 
     font-size: 0.94vw;
-    /* conversion de 14px en vw pour lisibilité sur différents supports*/
+    /* positionnement est centré horizontalement et équitablement réparti verticalement - conversion de 14px en vw pour lisibilité sur différents supports*/
     background-color: #404040;
     text-align: center;
-    padding: 2.685vw 0;
+    padding: 30px 0;
 }
 
 address {
@@ -169,7 +182,7 @@ address {
     border-bottom: #fb2056 solid 0.134vw;
 }
 
-/* Styles pour les écrans de largeur inférieure ou égale à 640px */
+/* comportement du menu sur différentes largeurs d'écrans -Styles pour les écrans de largeur inférieure ou égale à 640px */
 
 @media (max-width: 640px) {
     .navbarCTA nav ul {
@@ -231,7 +244,7 @@ button {
         /* Cache l'icône menu sur les écrans plus larges */
     }
 }
-.banner, #quote, .citation, img {
+.banner, #quote, .citation, img { /*Cette partie est globalement centrée, sauf l'image sur le côté.*/
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -296,7 +309,7 @@ button {
         justify-content: space-evenly; /* Distribue l'espace uniformément ;*/
     }
 
-    img {
+   #quote img {
         max-width: 50%; /* Limite la taille de l'image sur les grands écrans */
     }
 
@@ -320,4 +333,24 @@ button {
 }
 .evenement h2 {
     margin: 0;
+}
+.evt {
+    display: flex;
+    justify-content: center;
+}
+.evt1 ,.evt2 {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+}
+.image {
+    display: inline-block;
+    border-radius: 4px;
+    box-shadow: 10px 10px 0 1px rgba(0, 0, 0, .07);
+    filter: brightness(103%) contrast(96%)saturate(101%) blur(1px)hue-rotate(353deg);
+    padding: 3px;
+    max-width: 100%;
+    width: 88%;
+    height: auto;
+    vertical-align: middle;
 }
