--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ h4 {
 img {
     max-width: 100%;
     max-height: 100%;
+    border-radius: 4px;
     object-fit: cover;
 }
 
@@ -322,9 +323,9 @@ button {
    gap: 30px;
    padding: 10px;
 }
-.evenement span {
+.separator {
     width: 20%;
-    margin: 0 auto;
+    /*margin: 0 auto;*/
     border-bottom: #fb2056 solid 0.268vw;
 }
 .evenement h2 {
@@ -340,15 +341,13 @@ button {
     align-items: center;/*Tout est centré ici. */
 }
 .image {
-    display: inline-block;
     border-radius: 4px;
     box-shadow: 10px 10px 0 1px rgba(0, 0, 0, .07);
-    filter: brightness(103%) contrast(96%)saturate(101%) blur(1px)hue-rotate(353deg);
+    filter: brightness(103%) contrast(96%)saturate(101%) hue-rotate(353deg);
     padding: 3px;
-    max-width: 100%;
-    width: 88%;
-    height: auto;
-    vertical-align: middle;
+  
+    width: 90%;
+    
 }
 .bg-fix {
     display: flex;
@@ -370,9 +369,23 @@ button {
     width: 10%;
     border-bottom: #fb2056 solid 0.200vw;  
 }
-.bg-fix-2 button {
+.bg-fix-2 button, .dest button {
     display: flex;
     align-items: center;
-    width: 25%;
+    width: 30%;
 
+}
+.destination {
+    display: inline-flex;
+    align-content: space-between;
+    justify-content: space-around;
+    height: 100%;
+    gap: 10px;
+    padding: 10% 0 10% 0;
+}
+.dest {
+    display: flex;
+    flex-flow: column wrap;
+    gap: 10px;
+    width: 33%;
 }
