--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Noto Sans", sans-serif;
-    font-size: 1em;
+    font-size: 1.08vw;
     /*dimensions en % ou en vw.
      taille de police par défaut de tous les textes inclus dans le body conversion de 16px en em pour lisibilité sur différents supports*/
 }
@@ -118,7 +118,7 @@ a {
     text-decoration: none;
     /*suppression du surlignage par défaut*/
     color: white;
-    font-size: 1em;
+    font-size: 1.08vw;
     width: max-content;
     
 }
@@ -138,6 +138,7 @@ ul a {
 button {
     background: #fb2056;
     padding: 0.537vw 1.285vw;
+    width: 12.383vw;
     border-radius: 2.013vw;
     /*bord du bouton arrondi*/
     border: 0;
@@ -324,7 +325,7 @@ button {
    padding: 10px;
 }
 .separator {
-    width: 20%;
+    width: 18%;
     /*margin: 0 auto;*/
     border-bottom: #fb2056 solid 0.268vw;
 }
@@ -372,20 +373,23 @@ button {
 .bg-fix-2 button, .dest button {
     display: flex;
     align-items: center;
-    width: 30%;
+    
 
 }
 .destination {
     display: inline-flex;
-    align-content: space-between;
+    align-items: center;
     justify-content: space-around;
-    height: 100%;
-    gap: 10px;
-    padding: 10% 0 10% 0;
+    gap: 20px;
+    padding: 10% 8% 10% 8%;
 }
 .dest {
     display: flex;
     flex-flow: column wrap;
-    gap: 10px;
+    gap: 20px;
     width: 33%;
+    align-content: space-between;
+}
+.blank {
+    height: 1px;
 }
