--- a/services.css
+++ b/services.css
@@ -235,3 +235,41 @@ i {
 .image {
     padding-bottom: 19px;
 }
+
+@media (max-width: 640px) {
+    .navbarCTA nav ul {
+        display: none;
+        /* Cache la liste de navigation */
+        flex-direction: column;
+        width: 100%;
+    }
+
+
+    .icone-menu {
+        display: block;
+        /* Assure que l'icône est visible en mode mobile */
+        cursor: pointer;
+        position: absolute;
+        top: 1.32vw;
+        right: 1.32vw;
+        font-size: 1.584vw;
+        background: color #fb2056;
+        /* Couleur de fond */
+        color: white;
+        padding: 0.66vw;
+        border-radius: 5px;
+        z-index: 1000; /*ordre et position des élements flexibles ou enfants*/
+        transition: background-color 0.3s ease;
+    }
+
+    .icone-menu:hover {
+        background-color: #da1c4b;
+    }
+}
+/* Styles pour les écrans de largeur supérieure à 640px */
+@media (min-width: 641px) {
+    .icone-menu {
+        display: none;
+        /* Cache l'icône menu sur les écrans plus larges */
+    }
+}
