--- a/css/about.css
+++ b/css/about.css
@@ -196,13 +196,12 @@ i {
 }
 
 @media (max-width: 640px) {
-    .navbarCTA nav ul {
+    .navbarCTA nav ul  {
         display: none;
         /* Cache la liste de navigation */
         flex-direction: column;
         width: 100%;
     }
-
 
     .icone-menu {
         display: block;
@@ -211,18 +210,61 @@ i {
         position: absolute;
         top: 1.32vw;
         right: 1.32vw;
-        font-size: 6vw;
-        background: color #fb2056;
+        font-size: 5vw;
+        background-color: #fb2056;
         /* Couleur de fond */
         color: white;
-        padding: 0.66vw;
-        border-radius: 5px;
+        padding:0.56vw 2vw 0.4vw 2vw;
+        border-radius: 2px;
         z-index: 1000; /*ordre et position des élements flexibles ou enfants*/
         transition: background-color 0.3s ease;
     }
 
     .icone-menu:hover {
         background-color: #da1c4b;
+    }
+    img {
+        max-width: 99%; /* Limite la largeur de l'image pour éviter qu'elle soit trop grande */
+        height: auto; /* Maintient le ratio de l'image */
+    }
+    body, footer, header,a {
+        font-size: 9px;
+    }
+    button {
+        width: 9vh;
+    }
+    h1 {
+        font-size: 8vw;
+    }
+    h2 {
+        font-size: 4.295vw;
+       
+    }
+    h3 {
+        font-size:2.282vw;
+        
+    }
+    h4 {
+        font-size: 1.611vw;
+       
+    }
+    #fifthavenue {
+        text-align: left;
+       
+    }
+    .Header1 {
+        background-color: #f0f0f0;
+        margin: 0;
+        padding:3%
+    }
+    #logoblanc, .navbarCTA button {
+        display: none;
+    }
+    .Header1 img {
+        max-width: 50%;
+    }
+    footer span {
+        text-decoration: underline;
     }
 }
 
@@ -231,5 +273,8 @@ i {
     .icone-menu {
         display: none;
         /* Cache l'icône menu sur les écrans plus larges */
+    }
+    #logoblack {
+        display: none;
     }
 }
