--- a/css/style.css
+++ b/css/style.css
@@ -327,12 +327,12 @@ address {
         position: absolute;
         top: 1.32vw;
         right: 1.32vw;
-        font-size: 6vw;
-        background: color #fb2056;
+        font-size: 5vw;
+        background-color: #fb2056;
         /* Couleur de fond */
         color: white;
-        padding: 0.66vw;
-        border-radius: 5px;
+        padding:0.56vw 2vw 0.4vw 2vw;
+        border-radius: 2px;
         z-index: 1000; /*ordre et position des élements flexibles ou enfants*/
         transition: background-color 0.3s ease;
     }
@@ -350,11 +350,11 @@ address {
         max-width: 99%; /* Limite la largeur de l'image pour éviter qu'elle soit trop grande */
         height: auto; /* Maintient le ratio de l'image */
     }
-    body, footer, header,a,.citation q {
-        font-size: 8px;
+    body, footer, header,a {
+        font-size: 9px;
     }
     button {
-        width: 11vh;
+        width: 9vh;
     }
     h1 {
         font-size: 8vw;
@@ -373,7 +373,48 @@ address {
     }
     #fifthavenue {
         text-align: left;
-       }
+       
+    }
+    .evt {
+        display: flex;
+        flex-flow: column wrap;
+        align-items: center;
+        
+    }
+    .bg-fix, .destination {
+        flex-flow: column wrap;
+        align-items: center;
+        
+    }
+    .bg-fix-2, .dest {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        
+    }
+    .destination {
+        padding: 1% 6% 1% 6%;
+        background-color: #f0f0f0;
+    }
+    .Header1 {
+        background-color: #f0f0f0;
+        margin: 0;
+        padding:3%
+    }
+    #logoblanc, .navbarCTA button {
+        display: none;
+    }
+    .Header1 img {
+        max-width: 50%;
+    }
+    .citation q {
+        width: 100%;
+        font-size: 14px;
+    }
+    footer span {
+        text-decoration: underline;
+    }
+       
 }
 
 
@@ -395,6 +436,9 @@ address {
     .icone-menu {
         display: none;
         /* Cache l'icône menu sur les écrans plus larges */
+    }
+    #logoblack {
+        display: none;
     }
 }
 
